--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
-  "homepage": "https://mustafayasin.github.io/homepage",
+  "homepage": "https://mustafayasin.github.io",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
